--- a/exam.html
+++ b/exam.html
@@ -28,7 +28,7 @@
 
             </nav>
             <div class="flex items-center space-x-2 text-sm pr-4 font-medium text-gray-800">
-                <a href="#_" class="rounded bg-amber-400 px-3 py-2 text-white transition hover:bg-amber-400">Online
+                <a href="#_" class="rounded bg-amber-400 px-3 py-2 text-white transition hover:bg-amber-500">Online
                     programme
                 </a>
             </div>
@@ -96,158 +96,40 @@
                         class="w-6" alt="">
                 </a>
                 <a href="register.html"
-                    class="rounded bg-amber-400 px-3 py-2 text-white transition hover:bg-amber-400">Join us in Ghana</a>
+                    class="rounded bg-amber-400 px-3 py-2 text-white transition hover:bg-amber-500">Join us in Ghana</a>
             </div>
         </div>
     </section>
     <!-- Navbar End-->
-    <!-- Banner -->
+     <!-- Banner -->
     <section class="relative py-16 bg-white bg-bottom bg-cover"
-        style="background-image:url('https://cdn.devdojo.com/images/december2020/cta-bg.jpeg')">
-        <div class="flex justify-center ">
-            <div>
-                <h1 class="text-white font-bold text-5xl mb-2 text-center"> Student Life</h1>
-                <div class="w-82 h-2 bg-blue-500 rounded"></div>
+    style="background-image:url('https://cdn.devdojo.com/images/december2020/cta-bg.jpeg')">
+    <div class="flex justify-center ">
+        <div>
+            <h1 class="text-white font-bold text-5xl mb-2 text-center"> TOEFL</h1>
+            <div class="w-82 h-2 bg-blue-500 rounded"></div>
+        </div>
+    </div>
+</section>
+<!-- Banner End-->
+    <!-- Content -->
+    <section class=" flex items-center justify-center text-gray-700 m-4 min-h-screen">
+        <div class="w-4/5 bg-gray-100 rounded-2xl p-8 drop-shadow-xl">
+            <h1 class=" text-4xl font-black sm:text-5xl mb-3 ">
+                TOEFL <span class="text-4xl"> (Test Of English as a Foreign Language)</span>
+            </h1>
+            <div class="px-4">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus maiores
+                 placeat consequuntur totam quasi ex provident quidem molestiLorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus maiores
+                 placeat consequuntur totam quasi ex provident quidem molestiLorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus maiores
+                 placeat consequuntur totam quasi ex provident quidem molestiLorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus maiores
+                 placeat consequuntur totam quasi ex provident quidem molestiLorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus maiores
+                 placeat consequuntur totam quasi ex provident quidem molestias, eum unde veniam harum est ullam repellat, reprehenderit recusandae, voluptate quia dicta!
             </div>
         </div>
     </section>
-    <!-- Banner End-->
-    <!-- card -->
-    <section class="relative w-full bg-white">
-        <div class="absolute w-full h-32 bg-gradient-to-b from-gray-100 to-white"></div>
-        <div class="relative w-full px-5 py-10 mx-auto sm:py-12 md:py-16 md:px-10 max-w-7xl">
+    <!-- Content End -->
 
-
-            <div class="flex grid h-full grid-cols-12 gap-10 pb-10 mt-8 sm:mt-16">
-
-
-                <div class="grid grid-cols-12 col-span-12 gap-7">
-                    <div
-                        class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
-                        <a href="student_details.html" class="block transition duration-200 ease-out transform hover:scale-110">
-                            <img class="object-cover w-full shadow-sm "
-                                src="https://img.freepik.com/free-photo/airplane-sunset_1150-8338.jpg?t=st=1717548250~exp=1717551850~hmac=b31250962d7fb5465668b98a0008ca991ad906d1810e680628dc7b797b236d03&w=900">
-                        </a>
-                        <div class="relative flex flex-col items-start px-6 bg-white border border-t-0 border-gray-200 py-7 rounded-b-2xl">
-                            <h2 class="text-base font-bold sm:text-lg md:text-xl">
-                                <a href="student_details.html">Coming To Ghana</a>
-                            </h2>
-                            <p class="mt-2 text-sm text-gray-500">
-                                Prepare for your journey to Ghana with confidence! Discover essential travel tips and requirements to ensure a smooth arrival.
-                                From securing your passport and understanding visa needs to important health precautions, we've got you covered. 
-                            </p>
-                                <a class="  transition ease-in-out duration-300 bg-blue-500 border-blue-500 border-solid border-2 rounded-lg py-2 px-3 text-white mt-2 hover:text-blue-600 hover:bg-white" href="student_details.html">Read more...</a>
-                        </div>
-                        
-                    </div>
-
-                    <div
-                        class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
-                        <a href="student_details.html" class="block transition duration-200 ease-out transform hover:scale-110">
-                            <img class="object-cover w-full shadow-sm "
-                                src="https://cdn.devdojo.com/images/may2021/snacks.jpg">
-                        </a>
-                        <div
-                            class="relative flex flex-col items-start px-6 bg-white border border-t-0 border-gray-200 py-7 rounded-b-2xl">
-                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="#_">While in Ghana</a></h2>
-                            <p class="mt-2 text-sm text-gray-500">Learn how to be more disciplined in your diet and how
-                                you can eat to maximize productivity.
-                            </p>
-                            <a class="  transition ease-in-out duration-300 bg-blue-500 border-blue-500 border-solid border-2 rounded-lg py-2 px-3 text-white mt-2 hover:text-blue-600 hover:bg-white" href="student_details.html">Read more...</a>
-
-                        </div>
-                    </div>
-
-                    <div
-                        class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
-                        <a href="student_details.html" class="block transition duration-200 ease-out transform hover:scale-110">
-                            <img class="object-cover w-full shadow-sm "
-                                src="https://img.freepik.com/free-photo/airplane-sunset_1150-8338.jpg?t=st=1717548250~exp=1717551850~hmac=b31250962d7fb5465668b98a0008ca991ad906d1810e680628dc7b797b236d03&w=900">
-                        </a>
-                        <div
-                            class="relative flex flex-col items-start px-6 bg-white border border-t-0 border-gray-200 py-7 rounded-b-2xl">
-                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="#_">General Walfare</a>
-                            </h2>
-                            <p class="mt-2 text-sm text-gray-500">What does it mean to have a design mind-set? Learn how
-                                to improve your eye for design.
-                            </p>
-                            <a class="transition ease-in-out duration-300 bg-blue-500 border-blue-500 border-solid border-2 rounded-lg py-2 px-3 text-white mt-2 hover:text-blue-600 hover:bg-white" href="student_details.html">Read more...</a>
-
-                        </div>
-                    </div>
-                    <div
-                        class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
-                        <a href="student_details.html" class="block transition duration-200 ease-out transform hover:scale-110">
-                            <img class="object-cover w-full shadow-sm "
-                                src="https://cdn.devdojo.com/images/may2021/workstation.jpg">
-                        </a>
-                        <div
-                            class="relative flex flex-col items-start px-6 bg-white border border-t-0 border-gray-200 py-7 rounded-b-2xl">
-                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="#_">Placement</a></h2>
-                            <p class="mt-2 text-sm text-gray-500">Check out these inspiring workstations to get ideas on
-                                how to level-up your workstation.
-                            </p>
-                            <a class="transition ease-in-out duration-300 bg-blue-500 border-blue-500 border-solid border-2 rounded-lg py-2 px-3 text-white mt-2 hover:text-blue-600 hover:bg-white" href="student_details.html">Read more...</a>
-                        </div>
-                    </div>
-
-                    <div
-                        class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
-                        <a href="student_details.html" class="block transition duration-200 ease-out transform hover:scale-110">
-                            <img class="object-cover w-full shadow-sm "
-                                src="https://cdn.devdojo.com/images/may2021/snacks.jpg">
-                        </a>
-                        <div
-                            class="relative flex flex-col items-start px-6 bg-white border border-t-0 border-gray-200 py-7 rounded-b-2xl">
-                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="#_">Our books</a></h2>
-                            <p class="mt-2 text-sm text-gray-500">Learn how to be more disciplined in your diet and how
-                                you can eat to maximize productivity.
-                            </p>
-                            <a class="transition ease-in-out duration-300 bg-blue-500 border-blue-500 border-solid border-2 rounded-lg py-2 px-3 text-white mt-2 hover:text-blue-600 hover:bg-white" href="student_details.html">Read more...</a>
-                        </div>
-                    </div>
-                    <div
-                        class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
-                        <a href="student_details.html" class="block transition duration-200 ease-out transform hover:scale-110">
-                            <img class="object-cover w-full shadow-sm "
-                                src="https://cdn.devdojo.com/images/may2021/snacks.jpg">
-                        </a>
-                        <div
-                            class="relative flex flex-col items-start px-6 bg-white border border-t-0 border-gray-200 py-7 rounded-b-2xl">
-                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="#_">Examinations</a>
-                            </h2>
-                            <p class="mt-2 text-sm text-gray-500">What does it mean to have a design mind-set? Learn how
-                                to improve your eye for design.
-                            </p>
-                            <a class="transition ease-in-out duration-300 bg-blue-500 border-blue-500 border-solid border-2 rounded-lg py-2 px-3 text-white mt-2 hover:text-blue-600 hover:bg-white" href="student_details.html">Read more...</a>
-                        </div>
-                    </div>
-                    <div
-                        class="flex flex-col items-start col-span-12 overflow-hidden shadow-sm rounded-xl md:col-span-6 lg:col-span-4">
-                        <a href="student_details.html" class="block transition duration-200 ease-out transform hover:scale-110">
-                            <img class="object-cover w-full shadow-sm "
-                                src="https://cdn.devdojo.com/images/may2021/snacks.jpg">
-                        </a>
-                        <div
-                            class="relative flex flex-col items-start px-6 bg-white border border-t-0 border-gray-200 py-7 rounded-b-2xl">
-                            <h2 class="text-base font-bold sm:text-lg md:text-xl"><a href="#_">Enrolment Policies</a></h2>
-                            <p class="mt-2 text-sm text-gray-500">Learn how to be more disciplined in your diet and how
-                                you can eat to maximize productivity.
-                            </p>
-                            <a class="transition ease-in-out duration-300 bg-blue-500 border-blue-500 border-solid border-2 rounded-lg py-2 px-3 text-white mt-2 hover:text-blue-600 hover:bg-white" href="student_details.html">Read more...</a>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
-
-    <!-- AlpineJS Library -->
-
-
-
-    <!-- card end  -->
     <!-- footer-->
 
     <section class="w-full bg-black" data-primary="blue-500">
@@ -266,11 +148,14 @@
                     <a href="index.html"
                         class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Home</a>
                     <a href="about.html"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Our School</a>
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Our
+                        School</a>
                     <a href="programmes.html"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Our Programs</a>
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Our
+                        Programs</a>
                     <a href="students.html"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Student Life</a>
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Student
+                        Life</a>
                     <a href="accomodation.html"
                         class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Accomodation</a>
                 </nav>
