--- a/template.html
+++ b/template.html
@@ -67,7 +67,7 @@
                 <a href="about.html"
                     class="md:rounded bg-white md:px-3 px-5 md:py-2 py-3 transition hover:bg-gray-100 md:inline block md:w-auto w-full">Our School
                 </a>
-                <a href="programs.html"
+                <a href="programmes.html"
                     class="md:rounded bg-white md:px-3 px-5 md:py-2 py-3 transition hover:bg-gray-100 md:inline block md:w-auto w-full">Our programs
                 </a>
                 <a href="students.html"
@@ -123,25 +123,25 @@
                 </nav>
                 <nav class="col-span-1 md:col-span-1 lg:col-span-2">
                     <p class="mb-3 text-xs font-semibold tracking-wider text-blue-200 uppercase">Test Preparation</p>
-                    <a href="#"
+                    <a href="exam.html"
                         class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">TOEFL</a>
-                    <a href="#"
+                    <a href="exam.html"
                         class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">IELTS</a>
-                    <a href="#"
+                    <a href="exam.html"
                         class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">TOEIC</a>
                 </nav>
                 <nav class="col-span-2 md:col-span-1 lg:col-span-2">
-                    <p class="mb-3 text-xs font-semibold tracking-wider text-blue-200 uppercase">Test Preparation</p>
+                    <p class="mb-3 text-xs font-semibold tracking-wider text-blue-200 uppercase">Content</p>
                     <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">TOEFL</a>
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Content</a>
                     <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">TOEIC</a>
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Content</a>
                     <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Email</a>
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Contentl</a>
                     <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Partners</a>
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Content</a>
                     <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Jobs</a>
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Content</a>
                 </nav>
                 <div class="col-span-3">
                     <span class="inline-flex justify-center w-full mt-4 space-x-5 sm:ml-auto sm:mt-0 sm:justify-end">
