--- a/programmes.html
+++ b/programmes.html
@@ -254,41 +254,38 @@
                 </div>
                 <nav class="col-span-1 md:col-span-1 lg:col-span-2">
                     <p class="mb-3 text-xs font-semibold tracking-wider text-blue-200 uppercase">Product</p>
-                    <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Features</a>
-                    <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Integrations</a>
-                    <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Documentation</a>
-                    <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">FAQs</a>
-                    <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Pricing</a>
+                    <a href="index.html"
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Home</a>
+                    <a href="about.html"
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Our School</a>
+                    <a href="programmes.html"
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Our Programs</a>
+                    <a href="students.html"
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Student Life</a>
+                    <a href="accomodation.html"
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Accomodation</a>
                 </nav>
                 <nav class="col-span-1 md:col-span-1 lg:col-span-2">
-                    <p class="mb-3 text-xs font-semibold tracking-wider text-blue-200 uppercase">About</p>
-                    <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Our
-                        Story</a>
-                    <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Company</a>
-                    <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Privacy</a>
-                    <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Blog</a>
+                    <p class="mb-3 text-xs font-semibold tracking-wider text-blue-200 uppercase">Test Preparation</p>
+                    <a href="exam.html"
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">TOEFL</a>
+                    <a href="exam.html"
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">IELTS</a>
+                    <a href="exam.html"
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">TOEIC</a>
                 </nav>
                 <nav class="col-span-2 md:col-span-1 lg:col-span-2">
-                    <p class="mb-3 text-xs font-semibold tracking-wider text-blue-200 uppercase">Contact</p>
+                    <p class="mb-3 text-xs font-semibold tracking-wider text-blue-200 uppercase">Content</p>
                     <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Advertising</a>
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Content</a>
                     <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Press</a>
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Content</a>
                     <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Email</a>
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Contentl</a>
                     <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Partners</a>
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Content</a>
                     <a href="#"
-                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Jobs</a>
+                        class="flex mb-3 text-sm font-medium text-blue-100 transition md:mb-2 hover:text-white">Content</a>
                 </nav>
                 <div class="col-span-3">
                     <span class="inline-flex justify-center w-full mt-4 space-x-5 sm:ml-auto sm:mt-0 sm:justify-end">
